--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.2",
-    "recharts": "^2.1.15"
+    "recharts": "^2.1.15",
+    "sweetalert2": "^11.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
